# bci-identity-leakage

./: .gitignore  CITATION.cff  LICENSE  README.md  config.py  pyproject.toml
attacks/: closed_set.py  membership_inference.py  model_inversion.py  per_subject.py  verification.py
colab/: A1_eegnet_rerun.ipynb  A2_cross_task.ipynb  A2_vs_rest.ipynb  A3_cross_session.ipynb  A3_lee2019.ipynb  A3_lee2019_download.ipynb  A4_asymmetry_mechanism.ipynb  A4_cross_dataset.ipynb  A4_cross_dataset_symmetric.ipynb  A4_lee2019.ipynb  A4_multi_seed.ipynb  A4_open_set.ipynb  A5_fbcsp_mi.ipynb  A5_lee2019.ipynb  A5_membership_inference.ipynb  A5_riemann_mi.ipynb  D1_adaptive_attacker.ipynb  D1_channel_drop.ipynb  D1_noise.ipynb  D1_pca.ipynb  D2_adaptive_attacker.ipynb  D2_dann.ipynb  D2_dann_extended.ipynb  D3_adaptive_attacker.ipynb  D3_dp_sgd.ipynb  D3_eps_sweep.ipynb  D3_membership_aware.ipynb  D3_membership_aware_eps_sweep.ipynb  D3_model_inversion.ipynb  D4_federated_dp.ipynb  DP_SGD_arch_ablation.ipynb  Multi_seed.ipynb  README.md  SF_eegnet.ipynb  SF_eegnet_seeds.ipynb  SF_lee2019.ipynb  Tier1_multi_seed.ipynb  theory_scaling.ipynb
data/: bciiv2a_loader.py  channel_subset.py  lee2019_loader.py  lee2019_prefetch.py  m3cv_loader.py  physionet_loader.py  prefetch.py  prefetch_direct.py
defenses/: adhoc.py  dann.py  dp_sgd.py  federated.py
docs/: fairness_audit.md  figures.md  limitations.md  methods.md  reproducibility.md  theory.md
eval/: bootstrap.py  plots.py
experiments/: 01_baseline_utility.py  02_closed_set_reid.py  03_within_subject_reid.py  04_a2_cross_task.py  05_a3_cross_session.py  06_a4_open_set.py  07_d1_pca.py  08_a5_membership_inference.py  (+27 more)
(+152 files in other folders)
